# learning-rag

./: GEMINI.md  README.md  docker-compose.yaml  justfile  pyproject.toml
deployment/: processing.yaml
deployment/grafana/provisioning/datasources/: datasource.yaml
deployment/jaeger/: config.yaml
deployment/monitoring/: monitoring.docker-compose.yaml
deployment/otel-collector/: config.yaml
deployment/processing/: processing.docker-compose.yaml
deployment/tempo/: config.yaml
src/learning_rag/: app.py  dependencies.py
src/service_example/: main.py
