[project]
name = "learning-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jiří Filip", email = "j.f.ilip@seznam.cz" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "logfire>=4.27.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "pydantic-ai>=0.8.1",
]

[project.scripts]
learning-rag = "learning_rag:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
